@@ -1,3 +1,9 @@
+2007-03-21  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-preview.c
+	(gimp_display_shell_trace_tri_edge): be more robust to avoid
+	crashes like bug #420595.
+
 2007-03-20  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpcursorview.[ch] (gimp_color_frame_update_cursor):
